# ipx/api/handler/contract/erc20_types.go
@@ -1,6 +1,7 @@
 package contract
 
 import (
+	"encoding/hex"
 	"errors"
 	"math/big"
 	"strings"
@@ -26,16 +27,18 @@ func (r *ERC20MetadataRequest) ValidateRequest() error {
 }
 
 type ERC20MetadataResponse struct {
-	Name     string `json:"name"`
-	Symbol   string `json:"symbol"`
-	Decimals uint8  `json:"decimals"`
+	Name        string `json:"name"`
+	Symbol      string `json:"symbol"`
+	Decimals    uint8  `json:"decimals"`
+	TotalSupply string `json:"total_supply"`
 }
 
-func NewERC20MetadataResponse(n, s string, d uint8) *ERC20MetadataResponse {
+func NewERC20MetadataResponse(n, s, ts string, d uint8) *ERC20MetadataResponse {
 	return &ERC20MetadataResponse{
-		Name:     n,
-		Symbol:   s,
-		Decimals: d,
+		Name:        n,
+		Symbol:      s,
+		TotalSupply: ts,
+		Decimals:    d,
 	}
 }
 
@@ -159,4 +162,184 @@ func NewERC20ApproveResponse(a bool) *ERC20ApproveResponse {
 	return &ERC20ApproveResponse{
 		Approved: a,
 	}
+}
+
+type BalanceOfCalldataRequest struct {
+	Account string `json:"account" example:"0xDa70aA79f1a329719b9cf9d334b0a82b1d5269f3"`
+
+	a *types.Address
+}
+
+func (r *BalanceOfCalldataRequest) ValidateRequest() error {
+	r.Account = strings.TrimSpace(r.Account)
+	a, err := types.NewAddressFromHex(r.Account)
+	if err != nil {
+		return errors.New("account: invalid address")
+	}
+	r.a = a
+	return nil
+}
+
+func (r *BalanceOfCalldataRequest) ToAccount() *types.Address { return r.a }
+
+type BalanceOfCalldataResponse struct {
+	Data string `json:"data"`
+}
+
+func NewBalanceOfCalldataResponse(b []byte) *BalanceOfCalldataResponse {
+	return &BalanceOfCalldataResponse{Data: "0x" + hex.EncodeToString(b)}
+}
+
+type ApproveCalldataRequest struct {
+	Spender string `json:"spender" example:"0xDa70aA79f1a329719b9cf9d334b0a82b1d5269f3"`
+	Amount  string `json:"amount"  example:"1000000000000000000"`
+
+	s *types.Address
+	a *big.Int
+}
+
+func (r *ApproveCalldataRequest) ValidateRequest() error {
+	r.Spender = strings.TrimSpace(r.Spender)
+	s, err := types.NewAddressFromHex(r.Spender)
+	if err != nil {
+		return errors.New("spender: invalid address")
+	}
+	r.s = s
+
+	r.Amount = strings.TrimSpace(r.Amount)
+	var ok bool
+	r.a, ok = new(big.Int).SetString(r.Amount, 10)
+	if !ok {
+		return errors.New("amount: invalid integer")
+	}
+	return nil
+}
+
+func (r *ApproveCalldataRequest) ToSpender() *types.Address { return r.s }
+func (r *ApproveCalldataRequest) ToAmount() *big.Int        { return r.a }
+
+type ApproveCalldataResponse struct {
+	Data string `json:"data"`
+}
+
+func NewApproveCalldataResponse(b []byte) *ApproveCalldataResponse {
+	return &ApproveCalldataResponse{Data: "0x" + hex.EncodeToString(b)}
+}
+
+type TransferCalldataRequest struct {
+	To     string `json:"to"     example:"0xDa70aA79f1a329719b9cf9d334b0a82b1d5269f3"`
+	Amount string `json:"amount" example:"1000000000000000000"`
+
+	t *types.Address
+	a *big.Int
+}
+
+func (r *TransferCalldataRequest) ValidateRequest() error {
+	r.To = strings.TrimSpace(r.To)
+	t, err := types.NewAddressFromHex(r.To)
+	if err != nil {
+		return errors.New("to: invalid address")
+	}
+	r.t = t
+
+	r.Amount = strings.TrimSpace(r.Amount)
+	var ok bool
+	r.a, ok = new(big.Int).SetString(r.Amount, 10)
+	if !ok {
+		return errors.New("amount: invalid integer")
+	}
+	return nil
+}
+
+func (r *TransferCalldataRequest) ToAddress() *types.Address { return r.t }
+func (r *TransferCalldataRequest) ToAmount() *big.Int        { return r.a }
+
+type TransferCalldataResponse struct {
+	Data string `json:"data"`
+}
+
+func NewTransferCalldataResponse(b []byte) *TransferCalldataResponse {
+	return &TransferCalldataResponse{Data: "0x" + hex.EncodeToString(b)}
+}
+
+type AllowanceCalldataRequest struct {
+	Owner   string `json:"owner"   example:"0xDa70aA79f1a329719b9cf9d334b0a82b1d5269f3"`
+	Spender string `json:"spender" example:"0xDa70aA79f1a329719b9cf9d334b0a82b1d5269f3"`
+
+	o *types.Address
+	s *types.Address
+}
+
+func (r *AllowanceCalldataRequest) ValidateRequest() error {
+	r.Owner = strings.TrimSpace(r.Owner)
+	o, err := types.NewAddressFromHex(r.Owner)
+	if err != nil {
+		return errors.New("owner: invalid address")
+	}
+	r.o = o
+
+	r.Spender = strings.TrimSpace(r.Spender)
+	s, err := types.NewAddressFromHex(r.Spender)
+	if err != nil {
+		return errors.New("spender: invalid address")
+	}
+	r.s = s
+	return nil
+}
+
+func (r *AllowanceCalldataRequest) ToOwner() *types.Address   { return r.o }
+func (r *AllowanceCalldataRequest) ToSpender() *types.Address { return r.s }
+
+type AllowanceCalldataResponse struct {
+	Data string `json:"data"`
+}
+
+func NewAllowanceCalldataResponse(b []byte) *AllowanceCalldataResponse {
+	return &AllowanceCalldataResponse{Data: "0x" + hex.EncodeToString(b)}
+}
+
+type TransferFromCalldataRequest struct {
+	From   string `json:"from"   example:"0xDa70aA79f1a329719b9cf9d334b0a82b1d5269f3"`
+	To     string `json:"to"     example:"0xDa70aA79f1a329719b9cf9d334b0a82b1d5269f3"`
+	Amount string `json:"amount" example:"1000000000000000000"`
+
+	f *types.Address
+	t *types.Address
+	a *big.Int
+}
+
+func (r *TransferFromCalldataRequest) ValidateRequest() error {
+	r.From = strings.TrimSpace(r.From)
+	f, err := types.NewAddressFromHex(r.From)
+	if err != nil {
+		return errors.New("from: invalid address")
+	}
+	r.f = f
+
+	r.To = strings.TrimSpace(r.To)
+	t, err := types.NewAddressFromHex(r.To)
+	if err != nil {
+		return errors.New("to: invalid address")
+	}
+	r.t = t
+
+	r.Amount = strings.TrimSpace(r.Amount)
+	var ok bool
+	r.a, ok = new(big.Int).SetString(r.Amount, 10)
+	if !ok {
+		return errors.New("amount: invalid integer")
+	}
+	return nil
+}
+
+func (r *TransferFromCalldataRequest) ToFrom() *types.Address { return r.f }
+func (r *TransferFromCalldataRequest) ToTo() *types.Address   { return r.t }
+func (r *TransferFromCalldataRequest) ToAmount() *big.Int     { return r.a }
+
+type TransferFromCalldataResponse struct {
+	Data string `json:"data"`
+}
+
+func NewTransferFromCalldataResponse(b []byte) *TransferFromCalldataResponse {
+	return &TransferFromCalldataResponse{Data: "0x" + hex.EncodeToString(b)}
 }
